tests/files/lexer_tests/should_fail/080.cmdr
//Should not lex since missing open paren no variable
fn hi) hi;